--- a/results page/develop/css/style.css
+++ b/results page/develop/css/style.css
@@ -1,38 +1,117 @@
-header {
-    display: flex;
-    flex: wrap;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #264653;
+* {
+    box-sizing: border-box;
+}
+
+header{
+    width: 100%;
+    height: 100px;
+    background-color: rgb(38, 70, 83);;
+}
+
+h1{
+    text-align: center;
+    color: white;
+    width: 400px;
+}
+
+.homeBtn{
+    background-color: rgb(42, 157, 143);
+    color: rgb(42, 157, 143);
+    border: 2px solid rgb(42, 157, 143);
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    flex: left;
+    border-radius: 12px;
+    transition-duration: 0.4s;
+}
+
+.homeBtn:hover{
+    background-color: white;
+    color: black;
+    border: 2px solid rgb(42, 157, 143);
+    cursor: pointer;
+}
+
+.event-list li {
+    list-style: none;
+    margin: 1em 0;
+    padding: 20px 10px;
+    position: relative;
   }
 
-.nav-list {
+.flex-container {
     display: flex;
-    flex: wrap;
-    gap: 2rem;
-    list-style-type: none;
+    margin: 50px;
+    background-color: white;
+    border-radius: 12px;
 }
 
-.search-bar {
-    text-align: center;
-}
+.flex-child {
+    flex: 1;
+}  
 
-.event-container {
-    display: flex;
-    flex: wrap;
-    justify-content: space-around;
-
-}
-
-.artist-options {
+.card {
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+    width: 80%;
+    max-width: 600px;
     display: flex;
     flex-direction: column;
-    color: #2A9D8F;
-    font-size: 48px;
-    padding: 5px;
-    flex: 0 0 5em;
+    text-align: center;
+    padding: 30px;
+    border-radius: 10px;
+    overflow-wrap: break-word;
 }
 
-#area-map {
-    float: right;
+.date {
+    display: flex;
+    justify-content: space-around;
+    margin: 0;
+    padding: 0;
+    margin: 0 auto;
+    color: #2A9D8F;
 }
+
+.event-image {
+    border-radius: 10px;
+    border: 3px white; 
+}
+ .event-name {
+    font-size:2rem;
+    line-height: 1.1;
+    text-align: center;
+ }
+
+ .event-name::after {
+    content: "";
+    display: block;
+    height: 1px;
+    width: 2em;
+    background-color: black;
+    margin: 0.8em auto 0.5em;
+ }
+
+ .info {
+    margin: 0;
+    letter-spacing: 1.5px;
+    color: darkgray;
+ }
+
+ .location {
+    font-size: 20px;
+    color: darkgray;
+    text-align: center;
+ }
+
+ @media (min-width: 600px) {
+    .card {
+        flex-direction: row;
+    }
+
+    .main-content {
+        text-align: left;
+        margin-left: 2em;
+    }
+ }
